--- a/android/src/main/res/drawable/ic_pip.xml
+++ b/android/src/main/res/drawable/ic_pip.xml
@@ -3,35 +3,15 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <group>
-        <clip-path android:pathData="M0,0h24v24h-24z" />
-        <path
-            android:fillColor="#00000000"
-            android:pathData="M11,19H5C4.47,19 3.961,18.789 3.586,18.414C3.211,18.039 3,17.53 3,17V7C3,6.47 3.211,5.961 3.586,5.586C3.961,5.211 4.47,5 5,5H19C19.53,5 20.039,5.211 20.414,5.586C20.789,5.961 21,6.47 21,7V11"
-            android:strokeWidth="1.5"
-            android:strokeColor="#ffffff"
-            android:strokeLineCap="round"
-            android:strokeLineJoin="round" />
-        <path
-            android:fillColor="#00000000"
-            android:pathData="M20,14H15C14.448,14 14,14.448 14,15V18C14,18.552 14.448,19 15,19H20C20.552,19 21,18.552 21,18V15C21,14.448 20.552,14 20,14Z"
-            android:strokeWidth="1.5"
-            android:strokeColor="#ffffff"
-            android:strokeLineCap="round"
-            android:strokeLineJoin="round" />
-        <path
-            android:fillColor="#00000000"
-            android:pathData="M7,9L11,13"
-            android:strokeWidth="1.5"
-            android:strokeColor="#ffffff"
-            android:strokeLineCap="round"
-            android:strokeLineJoin="round" />
-        <path
-            android:fillColor="#00000000"
-            android:pathData="M8,13H11V10"
-            android:strokeWidth="1.5"
-            android:strokeColor="#ffffff"
-            android:strokeLineCap="round"
-            android:strokeLineJoin="round" />
-    </group>
+    <path
+        android:fillAlpha="0.4"
+        android:fillColor="#ffffff"
+        android:pathData="M7.52,2H15.48C18.93,2 21,4.06 21,7.52V15.47C21,18.94 18.93,21 15.48,21H7.53C4.07,21 2.01,18.94 2.01,15.48V7.52C2,4.06 4.07,2 7.52,2Z"
+        android:strokeAlpha="0.4" />
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M13,16.15V18.85C13,21.1 13.9,22 16.15,22H18.85C21.1,22 22,21.1 22,18.85V16.15C22,13.9 21.1,13 18.85,13H16.15C13.9,13 13,13.9 13,16.15Z" />
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M11.738,11.05C11.738,11.14 11.717,11.22 11.688,11.31C11.688,11.32 11.677,11.33 11.677,11.33C11.648,11.4 11.597,11.47 11.547,11.52C11.528,11.54 11.507,11.56 11.488,11.57C11.438,11.61 11.387,11.65 11.337,11.67C11.318,11.68 11.288,11.69 11.267,11.7C11.188,11.73 11.097,11.75 11.007,11.75L6.987,11.75C6.577,11.75 6.237,11.41 6.237,11C6.237,10.59 6.567,10.28 6.987,10.28L9.197,10.28L5.457,6.53C5.167,6.24 5.167,5.76 5.457,5.47C5.607,5.32 5.797,5.25 5.987,5.25C6.177,5.25 6.367,5.32 6.517,5.47L10.248,9.21L10.248,7.01C10.248,6.6 10.587,6.26 10.998,6.26C11.408,6.26 11.748,6.6 11.748,7.01L11.748,11.03C11.748,11.04 11.748,11.04 11.738,11.05Z" />
 </vector>
