--- a/android/src/main/res/drawable/custom_thumb.xml
+++ b/android/src/main/res/drawable/custom_thumb.xml
@@ -2,18 +2,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/primary" />
+            <solid android:color="@color/white" />
             <size
-                android:width="24dp"
-                android:height="24dp" />
-            <stroke
-                android:width="3dp"
-                android:color="@color/black" />
-            <padding
-                android:bottom="3dp"
-                android:left="3dp"
-                android:right="3dp"
-                android:top="3dp" />
+                android:width="20dp"
+                android:height="20dp" />
         </shape>
     </item>
 </layer-list>
