--- a/android/src/main/res/drawable/ic_close.xml
+++ b/android/src/main/res/drawable/ic_close.xml
@@ -1,10 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:tint="@color/white"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="@android:color/white"
-        android:pathData="M18.3,5.71c-0.39,-0.39 -1.02,-0.39 -1.41,0L12,10.59 7.11,5.7c-0.39,-0.39 -1.02,-0.39 -1.41,0 -0.39,0.39 -0.39,1.02 0,1.41L10.59,12 5.7,16.89c-0.39,0.39 -0.39,1.02 0,1.41 0.39,0.39 1.02,0.39 1.41,0L12,13.41l4.89,4.89c0.39,0.39 1.02,0.39 1.41,0 0.39,-0.39 0.39,-1.02 0,-1.41L13.41,12l4.89,-4.89c0.38,-0.38 0.38,-1.02 0,-1.4z" />
+        android:fillColor="#ffffff"
+        android:pathData="M13.711,11.999L17.423,8.287C17.891,7.819 17.891,7.045 17.423,6.577C16.955,6.109 16.18,6.109 15.712,6.577L12,10.288L8.288,6.577C7.82,6.109 7.046,6.109 6.578,6.577C6.11,7.045 6.11,7.819 6.578,8.287L10.289,11.999L6.578,15.711C6.11,16.179 6.11,16.954 6.578,17.422C6.82,17.664 7.126,17.777 7.433,17.777C7.74,17.777 8.046,17.664 8.288,17.422L12,13.71L15.712,17.422C15.954,17.664 16.261,17.777 16.567,17.777C16.874,17.777 17.181,17.664 17.423,17.422C17.891,16.954 17.891,16.179 17.423,15.711L13.711,11.999Z" />
 </vector>
