--- a/android/src/main/res/drawable/ic_play.xml
+++ b/android/src/main/res/drawable/ic_play.xml
@@ -1,10 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:tint="#FFFFFF"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="52dp"
+    android:height="52dp"
+    android:viewportWidth="52"
+    android:viewportHeight="52">
     <path
-        android:fillColor="@android:color/white"
-        android:pathData="M8,6.82v10.36c0,0.79 0.87,1.27 1.54,0.84l8.14,-5.18c0.62,-0.39 0.62,-1.29 0,-1.69L9.54,5.98C8.87,5.55 8,6.03 8,6.82z" />
+        android:fillColor="#FFFFFF"
+        android:pathData="M10.341,10.962C10.376,7.843 13.809,5.961 16.457,7.611L41.035,22.928C43.542,24.491 43.548,28.138 41.047,29.71L16.128,45.368C13.448,47.053 9.965,45.103 10,41.937L10.341,10.962Z" />
 </vector>
