--- a/android/src/main/res/values/colors.xml
+++ b/android/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#FF51A3FE</color>
+    <color name="primary">#00A4FF</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -12,12 +12,12 @@
     <color name="hint">#ADFFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="second_black">#111B33</color>
-    <color name="main">#1C1C1E</color>
-    <color name="main_dark">#1C1C1E</color>
+    <color name="main">#181818</color>
+    <color name="main_dark">#181818</color>
     <color name="red">#F40100</color>
     <color name="red300">#74F40100</color>
     <color name="blue">#51A3FE</color>
     <color name="grey10">#A8A8A8</color>
-    <color name="white50">#50FFFFFF</color>
+    <color name="white27">#27FFFFFF</color>
     <color name="second_black40">#66100E19</color>
 </resources>
