--- a/android/src/main/res/layout/activity_player.xml
+++ b/android/src/main/res/layout/activity_player.xml
@@ -5,6 +5,7 @@
     android:id="@+id/player_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".activities.VideoPlayerActivity">
 
     <androidx.media3.ui.PlayerView
