--- a/android/src/main/res/layout/custom_playback_view.xml
+++ b/android/src/main/res/layout/custom_playback_view.xml
@@ -86,6 +86,7 @@
             android:ellipsize="end"
             android:gravity="center_horizontal"
             android:maxLines="2"
+            android:paddingHorizontal="16dp"
             android:text="Avengers"
             android:textColor="@color/white"
             android:textSize="18sp"
